# fundational_pvi

./: .gitignore  EXPERIMENTS.md  MODELS.md  PERFORMANCE_DIAGNOSIS.md  PLAN.md  README.md  RUNLOG.md  WORKLOG_PHASE0_ONWARD.md  pyproject.toml  requirements.txt
legacy_matlab/: MLTRAININGREPORT.m  bp_holdout.csv  bp_test.csv  cohort_stack.m  compute_emd.m  compute_metrics_maBP.m  ensemble_01_compile.m  ensemble_02_plotting.asv  fix_axis.m  fix_history_string.m  interps_plot_cohort.m  interps_stack.m  plot_history_all.m  plot_results_single.m  plot_statistics_all.m  plot_tukey.m  scatter_regress.m  test_trajectory.m  write_struct_hdf5.mat
pvi-ml/analysis/: training_report.py
pvi-ml/matlab/: bp_plot_ensemble.m  cohort_plot.asv  cohort_plot.m  combine_ML_results.m  ensemble_02_plotting.m  interps_plot_cohort.asv  make_tiles.m  plot_bp_sequences.m  plot_histograms.m  plot_history_single.m  plot_interps.m  plot_results.asv  plot_results_all.m  plot_tracing.m  (+8 more)
src/: .gitignore  README.md  ensure_parquet_cache.sh  launch.sh  launch_budget.sh  launch_build_cache.sh  launch_build_cache_holdout_disjoint.sh  launch_build_cache_impedance.sh  launch_build_cache_main_disjoint.sh  launch_build_cache_main_within.sh  launch_crt_pretrain.sh  launch_mae_ssl.sh  launch_ssl.sh  launch_ssl_scale_check.sh  launch_ssl_scale_postcheck.sh  launch_test.sh  launch_transfer.sh  packages.py  run_tests_fast.sh
tests/: test_adversarial.py  test_decomposition.py  test_densenet_convlstm.py  test_eit_recon.py  test_evaluation.py  test_experiments.py  test_interpretability.py  test_mae_transformer.py  test_milestone1.py  test_milestone2.py  test_milestone3.py  test_model_factory.py  test_model_mapper.py  test_multitask.py  test_per_subject_readout.py  test_pvi_cache.py  test_rope.py  test_smoke.py  test_subject_batch.py
(+82 files in other folders)
